# zero2prod

./: Cargo.toml  Dockerfile  README.md  ]  docker-compose.yaml  justfile  spec.yaml
.github/workflows/: build-docker.yml  deploy-ec2.yml  deploy.yml  general.yml
.sqlx/: query-fd9d24ef020f6b4d29a4e2e016e658635252619647427720034ffad86e90ed28.json
configuration/: base.yaml  production.yaml
prometheus/: Dockerfile  prometheus.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  metrics.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
