[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Sergei Kharchikov <callmestech@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["serde_derive"] }
sqlx = { version = "0.7.3", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1.35.1", features = ["full"] }
