[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Sergei Kharchikov <callmestech@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
config = "0.14.0"
hyper = { version = "1.3.1", features = ["full"] }
log = "0.4.22"
reqwest = "0.12.5"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.7.4", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
once_cell = "1.19.0"
